# gregor_zwanzig

./: .cursorrules  .env.e2e  .env.example  .env.tpl  .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  README.md  Soll-Mockups.html  config.ini  go.mod  go.sum  openapi.yaml  openspec.yaml  pyproject.toml  red_839_fmt_val_thresholds.txt
.claude/: active_workflow  cleanup-worktrees.sh  e2e_verified.json  framework_version.json  pending_validation.json  red_issue_623.txt  red_issue_626.txt  red_issue_628.txt  red_issue_630.txt  red_issue_633.txt  red_issue_635.txt  red_issue_636.txt  red_issue_640.txt  red_issue_650.txt  red_issue_652.txt  red_issue_663.txt  red_issue_670.txt  red_issue_688.txt  settings.json  validate-external.sh  validate.py  validation_state.json  validator.env.bak  validator.env.example  workflow_state.json
.claude/agents/: analysis-challenger.md  bug-intake.md  bug-investigator.md  developer-agent.md  developer.md  docs-updater.md  external-validator.md  feature-planner.md  fresh-eyes-inspector.md  implementation-validator.md  spec-validator.md  spec-writer.md  staging-validator.md  test-runner.md  user-story-planner.md
.claude/commands/: 0-bug.md  0-feature.md  0-user-story.md  00-bug.md  00-intake.md  01-feature.md  1-context.md  10-context.md  1_analyse.md  2-analyse.md  20-analyse.md  2_write-spec.md  3-write-spec.md  30-write-spec.md  3_implement.md  4-tdd-red.md  40-tdd-red.md  4_validate.md  5-implement.md  50-implement.md  5_e2e-test.md  6-validate.md  60-validate.md  7-deploy.md  70-deploy.md  80-workflow.md  81-add-artifact.md  82-test.md  83-user-story.md  90-retro.md  99-reset.md  README.md  analyse.md  bug.md  e2e-verify.md  feature.md  radar.md  user-story.md  workflow.md  write-spec.md
.claude/hooks/: _bootstrap.py  _e2e_paths.py  adr_guard.py  adversary_dialog.py  architecture_guard.py  auto_restart_server.py  backlog_guard.py  bash_gate.py  briefing_mail_validator.py  claude_md_protection.py  config_loader.py  data_schema_backup.py  design_fidelity_diff.py  e2e_browser_test.py  e2e_commit_gate.py  e2e_telegram_live.py  edit_gate.py  edit_verify.py  email_spec_validator.py  hook_utils.py  legacy_entities.txt  migrate_state.py  migrate_v2_to_v3.py  nebenbefund_gate.py  notify_sound.py  official_alert_mail_validator.py  override_token.py  post_bash.py  (+28 more)
.cursor/: README.md
api/: main.py
audit/: REPORT.md  routes.json  screenshot-results.json  take-screenshots.mjs
claude-code-handoff/: INSTRUCTIONS.md  MANIFEST.txt  PROMPT-FUER-CLAUDE-CODE.txt  PROMPT-FÜR-CLAUDE-CODE.txt  create-issues.sh  issues.json
docs/: README.md  api_contract.md  architecture.md  backlog.md  decision_matrix.md  renderer_email_spec.md  scope.md
examples/: stubai_heute.json  stubai_skitour.json
fixtures/: INDEX.md
frontend/: .env.test  README.md  _bug320_before_screenshot.mjs  package-lock.json  package.json  playwright.1229-hub.staging.config.ts  playwright.1234.staging.config.ts  playwright.1256-s2.staging.config.ts  playwright.1256-s6.staging.config.ts  playwright.1256-s7.staging.config.ts  playwright.1256-s8.staging.config.ts  playwright.1256-s8c.staging.config.ts  playwright.1256-s8d.staging.config.ts  playwright.1269.staging.config.ts  playwright.1272.staging.config.ts  playwright.1273-s4c.staging.config.ts  playwright.675.config.ts  playwright.703.config.ts  playwright.758.staging.config.ts  playwright.774.config.ts  playwright.880.staging.config.ts  playwright.946.staging.config.ts  playwright.953.staging.config.ts  playwright.bundle-i.staging.config.ts  playwright.compare-metric-order.staging.config.ts  playwright.config.ts  playwright.staging.config.ts  test-lib-hooks.mjs  test-lib-loader.mjs  vite.config.ts
schemas/: INDEX.md  normalized_timeseries.schema.json
scripts/: __init__.py  analyze_openmeteo_calls.py  backfill_arrival_calculated_802.py  backfill_display_config_issue111.py  cleanup_1133_testdata.py  cleanup_1265_prod_testdata.py  cleanup_1284_admin_prod.py  contrast_audit.py  dump-claude-design-issues.sh  fix_243_stage_ids.py  migrate_1191_compare_active_metrics.py  migrate_1219_email_verified.py  migrate_1231_corridors.py  migrate_1244_null_lists.py  migrate_1250_briefings.py  migrate_1258_official_warnings.py  migrate_1262_flat_metrics.py  migrate_1351_drop_compare_channel_layouts.py  migrate_946_alert_levels.py  migrate_start_time_canonical.py  preview_email.py  refresh-openmeteo-fixtures.sh  seed_validator_archive.py  send_gate_test_mails.py  setup-validator-user.sh  setup_staging_validator_trip.py  telegram_set_commands.sh  telegram_set_webhook.sh  verify_activity_profile_migration.py
src/: README.md
tests/: INDEX.md  conftest.py  test_adr_index_drift.py  test_aggregation.py  test_api_contract_drift.py  test_briefing_route_cutover.py  test_cleanup_admin_prod_purge.py  test_compare_auto_pause_end_date.py  test_compare_channel_layouts_migration.py  test_compare_preset_paused_at.py  test_compare_vergleich_cutover.py  test_config.py  test_core.py  test_debug.py  test_egress_inventory_drift.py  test_formatters.py  test_geosphere.py  test_loader.py  test_migrate_1250_briefings.py  test_models.py  test_outputs.py  test_provider_met.py  test_provider_tz_normalization.py  test_providers_base.py  test_scheduler_trigger_userid_required.py  test_services.py  test_trip.py  test_trip_flat_fields_dual_read.py  test_trip_forecast.py  test_user.py  test_wind_chill_max_selectable.py
tools/: weather_validation.py
(+5381 files in other folders)
