[project]
name = "gregor-zwanzig"
version = "0.2.0"
description = "Weather risk reports for outdoor activities"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "nicegui>=2.0.0",
    "apscheduler>=3.10",
    "beautifulsoup4>=4.14.3",
    "tenacity>=8.2.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "tdd: TDD tests using external ground truth sources (may be slow)",
]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "jsonschema",
    "ruff>=0.8.0",
    "playwright>=1.57.0",
]
