[project]
name = "gregor-zwanzig"
version = "0.2.0"
description = "Weather risk reports for outdoor activities"
requires-python = ">=3.10,<3.14"
dependencies = [
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "nicegui>=2.0.0",
    "apscheduler>=3.10",
    "beautifulsoup4>=4.14.3",
    "tenacity>=8.2.0",
    "gpxpy>=1.6.2",
    "astral>=3.2",
    "timezonefinder>=8.2.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
# Tests: relax conventions that don't apply to test code
"tests/**" = [
    "E402",  # sys.path manipulation before imports is common in test files
    "E741",  # short variable names (l, I, O) acceptable in tests
    "F841",  # unused locals often intentional in fixtures/helpers
    "F402",  # loop-var shadowing imports — limited scope in tests
]
# Source: forward references in type hints (legitimate, evaluated as strings)
"src/app/loader.py" = ["F821"]
"src/app/trip.py" = ["F821"]
"src/services/weather_metrics.py" = ["F821"]
"src/web/scheduler.py" = ["F821"]
# Source: forward refs + dead-code tech-debt — chore-cleanup follows in dedicated workflow PR
"src/app/metric_catalog.py" = ["F821", "F401", "F402"]
"src/web/pages/compare.py" = ["F821", "F401", "F841"]
"src/core/segment_builder.py" = ["F401", "F402"]
"src/output/renderers/email/helpers.py" = ["F401"]
"src/services/daylight_service.py" = ["F401"]
"src/services/weather_snapshot.py" = ["F401", "F841"]
"src/services/wind_exposition.py" = ["F401", "F841"]
"src/web/pages/gpx_upload.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "-q -m 'not email'"
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "tdd: TDD tests using external ground truth sources (may be slow)",
    "email: Tests that send real emails via SMTP (run with: pytest -m email)",
]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "jsonschema",
    "ruff>=0.8.0",
    "playwright>=1.57.0",
]
